fix letter-spacing detail program + fix events box-shadow

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -300,7 +300,7 @@
 }
 
 .staff-box {
-  box-shadow: 10px 20px 10px 5px var(--warna-footer); /* default rgb(198, 198, 202) */
+  box-shadow: 10px 15px 10px 5px var(--warna-footer); /* default rgb(198, 198, 202) */
   height: auto;
   width: auto;
   overflow: auto;
@@ -364,7 +364,7 @@
 }
 
 .fa-instagram:hover {
-  color: #000000;
+  color: var(--warna-text);
 }
 
 @media only screen and (max-width: 992px) {
