--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -154,7 +154,7 @@ h3 {
 
 h4 {
   font-size: 21px;
-  color: var(--warna-text-title);
+  color: var(--warna-text);
   margin-top: 25px;
 }
 
@@ -1694,7 +1694,7 @@ p.count-text {
 }
 
 #team_slider h3 {
-  color: #000;
+  color: var(--warna-text);
   font-size: 16px;
   font-weight: 600;
   padding: 0;
